--- a/render.yaml
+++ b/render.yaml
@@ -16,6 +16,8 @@ services:
     envVars:
       - key: DJANGO_ENVIRONMENT
         value: production
-    buildCommand: bash setup.sh
+    # buildCommand: bash setup.sh
     startCommand: gunicorn mysite.wsgi --bind 0.0.0.0:$PORT
+    buildCommand: ./setup.sh
+
 
